changed file structure

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -121,11 +121,12 @@ MaterialForDroppedTextures=None
 MaterialParamsForDroppedTextures=()
 
 [MRU]
-MRUItem0=/Game/NewMap
-MRUItem1=/Game/Untitled
+MRUItem0=/Game/myFirstProject/Level_01
+MRUItem1=/Game/NewMap
+MRUItem2=/Game/Untitled
 
 [EditorStartup]
-LastLevel=/Game/NewMap
+LastLevel=/Game/myFirstProject/Level_01
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -179,6 +180,94 @@ StaticMeshComponent.Navigation=True
 StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
+SkyLight.TransformCommon=True
+SkyLight.Light=True
+SkyLight.Rendering=True
+SkyLight.DistanceFieldAmbientOcclusion=True
+SkyLight.AtmosphereAndCloud=True
+SkyLight.Visualization=True
+SkyLight.RayTracing=True
+SkyLight.SkyLight=True
+SkyLight.Tags=True
+SkyLight.Cooking=True
+SkyLight.Physics=True
+SkyLight.Networking=True
+SkyLight.Actor=True
+SkyLightComponent.Light=True
+SkyLightComponent.DistanceFieldAmbientOcclusion=True
+SkyLightComponent.AtmosphereAndCloud=True
+DirectionalLight.TransformCommon=True
+DirectionalLight.Light=True
+DirectionalLight.Rendering=True
+DirectionalLight.Lightmass=True
+DirectionalLight.LightShafts=True
+DirectionalLight.CascadedShadowMaps=True
+DirectionalLight.DistanceFieldShadows=True
+DirectionalLight.RayTracing=True
+DirectionalLight.AtmosphereAndCloud=True
+DirectionalLight.Performance=True
+DirectionalLight.LightFunction=True
+DirectionalLight.Tags=True
+DirectionalLight.Cooking=True
+DirectionalLight.HLOD=True
+DirectionalLight.Physics=True
+DirectionalLight.Networking=True
+DirectionalLight.Actor=True
+DirectionalLightComponent.Light=True
+DirectionalLightComponent.AtmosphereAndCloud=True
+SkyAtmosphere.TransformCommon=True
+SkyAtmosphere.Planet=True
+SkyAtmosphere.Atmosphere=True
+SkyAtmosphere.Atmosphere - Rayleigh=True
+SkyAtmosphere.Atmosphere - Mie=True
+SkyAtmosphere.Atmosphere - Absorption=True
+SkyAtmosphere.Art Direction=True
+SkyAtmosphere.Rendering=True
+SkyAtmosphere.Physics=True
+SkyAtmosphere.Tags=True
+SkyAtmosphere.Activation=True
+SkyAtmosphere.Cooking=True
+SkyAtmosphere.Replication=True
+SkyAtmosphere.Networking=True
+SkyAtmosphere.Actor=True
+SkyAtmosphereComponent.Planet=True
+SkyAtmosphereComponent.Atmosphere=True
+SkyAtmosphereComponent.Atmosphere - Rayleigh=True
+SkyAtmosphereComponent.Atmosphere - Mie=True
+SkyAtmosphereComponent.Atmosphere - Absorption=True
+SkyAtmosphereComponent.Art Direction=True
+VolumetricCloud.TransformCommon=True
+VolumetricCloud.Layer=True
+VolumetricCloud.Planet=True
+VolumetricCloud.Cloud Material=True
+VolumetricCloud.Cloud Tracing=True
+VolumetricCloud.Rendering=True
+VolumetricCloud.Physics=True
+VolumetricCloud.Tags=True
+VolumetricCloud.Activation=True
+VolumetricCloud.Cooking=True
+VolumetricCloud.Replication=True
+VolumetricCloud.Networking=True
+VolumetricCloud.Actor=True
+VolumetricCloudComponent.Layer=True
+VolumetricCloudComponent.Planet=True
+VolumetricCloudComponent.Cloud Material=True
+ExponentialHeightFog.TransformCommon=True
+ExponentialHeightFog.ExponentialHeightFogComponent=True
+ExponentialHeightFog.InscatteringTexture=True
+ExponentialHeightFog.DirectionalInscattering=True
+ExponentialHeightFog.VolumetricFog=True
+ExponentialHeightFog.Rendering=True
+ExponentialHeightFog.Physics=True
+ExponentialHeightFog.Tags=True
+ExponentialHeightFog.Activation=True
+ExponentialHeightFog.Cooking=True
+ExponentialHeightFog.Replication=True
+ExponentialHeightFog.Networking=True
+ExponentialHeightFog.Actor=True
+ExponentialHeightFogComponent.ExponentialHeightFogComponent=True
+ExponentialHeightFogComponent.DirectionalInscattering=True
+ExponentialHeightFogComponent.VolumetricFog=True
 
 [PlacementMode]
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
