poly dupe, create, and merge

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -357,6 +357,20 @@ LandscapeEditorObject.New Landscape=True
 Actor.TransformCommon=True
 Actor.Networking=True
 Actor.Actor=True
+EditMeshPolygonsToolCancelAction.CurrentOperation=True
+EdgeLoopInsertionProperties.InsertEdgeLoop=True
+CombineMeshesToolProperties.OutputObject=True
+OnAcceptHandleSourcesPropertiesSingle.OnToolAccept=True
+DrawPolygonToolStandardProperties.Polygon=True
+DrawPolygonToolStandardProperties.Extrude=True
+DrawPolygonToolSnapProperties.Snapping=True
+OnAcceptHandleSourcesProperties.OnToolAccept=True
+CSGMeshesToolProperties.Boolean=True
+CSGMeshesToolProperties.Display=True
+CSGMeshesToolProperties.Materials=True
+TransformInputsToolProperties.Transform=True
+BaseCreateFromSelectedHandleSourceProperties.OutputObject=True
+BaseCreateFromSelectedHandleSourceProperties.OnToolAccept=True
 
 [PlacementMode]
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
@@ -381,7 +395,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Architecture
+ContentBrowserDrawer.SelectedPaths=/Game/myFirstProject/_GENERATED/kobys
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1540,6 +1554,20 @@ PrimitiveComponent="\"Object\" "
 Actor="\"Object\" "
 ProceduralBoxToolProperties="\"Object\" "
 ProceduralShapeToolProperties="\"Object\" "
+MeshTopologySelectionMechanicProperties="\"Object\" "
+PolyEditCommonProperties="\"Object\" "
+PolyEditTopologyProperties="\"Object\" "
+EditMeshPolygonsToolActionPropertySet="\"Object\" "
+EdgeLoopInsertionProperties="\"Object\" "
+CombineMeshesToolProperties="\"Object\" "
+OnAcceptHandleSourcesPropertiesSingle="\"Object\" "
+OnAcceptHandleSourcesPropertiesBase="\"Object\" "
+DrawPolygonToolStandardProperties="\"Object\" "
+DrawPolygonToolSnapProperties="\"Object\" "
+OnAcceptHandleSourcesProperties="\"Object\" "
+CSGMeshesToolProperties="\"Object\" "
+TransformInputsToolProperties="\"Object\" "
+BaseCreateFromSelectedHandleSourceProperties="\"Object\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/StarterContent/Architecture/Wall_Window_400x300
