added materials to meshes

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,7 +131,7 @@ MinimumOrthographicZoom=250.000000
 bAllowArcballRotate=False
 bAllowScreenRotate=False
 bShowActorEditorContext=True
-SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
+SnapToSurface=(bEnabled=True,SnapOffsetExtent=0.000000,bSnapRotation=True)
 bEnableLayerSnap=False
 ActiveSnapLayerIndex=0
 PreserveNonUniformScale=False
@@ -162,7 +162,7 @@ MRUItem3=/Game/Untitled
 LastLevel=/Game/myFirstProject/Level_01
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [DetailCategories]
 LandscapeStreamingProxy.TransformCommon=True
@@ -183,10 +183,10 @@ LandscapeStreamingProxy.Networking=True
 LandscapeStreamingProxy.WorldPartition=True
 LandscapeStreamingProxy.Input=True
 LandscapeStreamingProxy.Actor=True
-StaticMeshActor.TransformCommon=True
-StaticMeshActor.StaticMesh=True
+StaticMeshActor.TransformCommon=False
+StaticMeshActor.StaticMesh=False
 StaticMeshActor.Materials=True
-StaticMeshActor.Physics=True
+StaticMeshActor.Physics=False
 StaticMeshActor.Collision=True
 StaticMeshActor.Lighting=True
 StaticMeshActor.Rendering=True
@@ -371,8 +371,18 @@ CSGMeshesToolProperties.Materials=True
 TransformInputsToolProperties.Transform=True
 BaseCreateFromSelectedHandleSourceProperties.OutputObject=True
 BaseCreateFromSelectedHandleSourceProperties.OnToolAccept=True
+MeshUVChannelProperties.UV Channel=True
+UVProjectionToolProperties.UV Projection=True
+UVProjectionToolProperties.UV Transform=True
+UVProjectionToolEditActions.Actions=True
+ExistingMeshMaterialProperties.PreviewMaterial=True
+UVLayoutProperties.UV Layout=True
+UVLayoutPreviewProperties.Preview UV Layout=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/M_Metal_Gold.M_Metal_Gold;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_New.M_Brick_Clay_New;
+RecentlyPlaced=/Game/StarterContent/Materials/M_Brick_Clay_Old.M_Brick_Clay_Old;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x300.Wall_400x300;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x400.Wall_400x400;
 RecentlyPlaced=/Game/StarterContent/Architecture/Wall_400x200.Wall_400x200;
@@ -395,7 +405,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/myFirstProject/_GENERATED/kobys
+ContentBrowserDrawer.SelectedPaths=/Game/StarterContent/Materials
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -424,6 +434,8 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 GlobalAssetPicker.ThumbnailSize=2
 GlobalAssetPicker.CurrentViewType=0
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -452,7 +464,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [RootWindow]
-ScreenPosition=X=340.000 Y=517.000
+ScreenPosition=X=459.000 Y=253.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -1493,6 +1505,8 @@ HierarchicalLODUtilities.TimeStamp=2023.08.26-15.38.29
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 EnvironmentLightingViewer.TimeStamp=2023.08.26-15.38.29
 EnvironmentLightingViewer.LastCompileMethod=Unknown
+GeometryProcessingInterfaces.TimeStamp=2023.08.26-15.38.29
+GeometryProcessingInterfaces.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1568,6 +1582,11 @@ OnAcceptHandleSourcesProperties="\"Object\" "
 CSGMeshesToolProperties="\"Object\" "
 TransformInputsToolProperties="\"Object\" "
 BaseCreateFromSelectedHandleSourceProperties="\"Object\" "
+MeshUVChannelProperties="\"Object\" "
+UVProjectionToolProperties="\"Object\" "
+ExistingMeshMaterialProperties="\"Object\" "
+UVLayoutProperties="\"Object\" "
+UVLayoutPreviewProperties="\"Object\" "
 
 [ContentBrowserRecent]
 MRUItem0=/Game/StarterContent/Architecture/Wall_Window_400x300
